chore: moved to new domain and all apps to subdomains

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DOCKER_REGISTRY=justin.konratts.de
+DOCKER_REGISTRY=docker.justinkonratt.com
 ORGANIZATION=codesdowork
 PROJECT=monorepo
 IMAGE_BASE=${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
