--- a/apps/server/renovate/docker-compose.yml
+++ b/apps/server/renovate/docker-compose.yml
@@ -4,6 +4,6 @@ services:
       context: .
     environment:
       - RENOVATE_TOKEN=${RENOVATE_TOKEN}
-      - GIT_URL=https://${DOMAIN}${GITLAB_BASE}
+      - GIT_URL=https://${GITLAB_DOMAIN}
       - GITHUB_COM_TOKEN=${RENOVATE_GITHUB_COM_TOKEN}
     image: ${IMAGE_BASE}/server-renovate
