--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,74 +1,74 @@
-DOMAIN=justin.konratts.de
-SERVER_ADDRESS=some_ip_or_hostname
+DOMAIN=justinkonratt.com
+SERVER_ADDRESS=ip
 
-AUTH_BASE=/auth
 AUTH_PASSWORD=pass
+AUTH_DOMAIN=auth.${DOMAIN}
 AUTH_PORT=8080
 AUTH_USER=codesdowork
 AUTH_REALM=server
 
-BACKUP_BASE=/backups
-BACKUP_SERVICE_PORT=5555
 BACKUP_PC_PATH=D:/Documents
+BACKUP_VOLUME_PATH=./backup-service
+
+BITWARDEN_DOMAIN=bitwarden.justinkonratt.com
+BITWARDEN_ADMIN_TOKEN=token
+BITWARDEN_PORT=80
 
 CACHE_PORT=6379
 
 CERTS_DIR=./certs
 
+DASHBOARD_DOMAIN=dashboard.justinkonratt.com
 DASHBOARD_PORT=80
 
 DB_DEFAULT_DB_NAME=postgres
 DB_PASSWORD=pass
 DB_USER=postgres
 
-DOCKER_REGISTRY_HOST=${DOMAIN}
 DOCKER_REGISTRY_PORT=5000
 
-DOCUMENTATION_BASE=/docs
 DOCUMENTATION_PORT=80
 
-GITLAB_BASE=/gitlab
+DOKU_PORT=9090
+
 GITLAB_PORT=80
+GITLAB_DOMAIN=gitlab.${DOMAIN}
 GITLAB_AUTH_CLIENT_ID=gitlab
 GITLAB_AUTH_CLIENT_SECRET=secret
 
+GRAFANA_PORT=3000
+
 JUST_SITE_PORT=3000
 
-MUSIC_BASE=/music
 MUSIC_PORT=4533
 MUSIC_SUBNET=172.18.0.0/16
 MUSIC_GATEWAY=172.18.0.1
-MUSIC_VOLUME=~/music
+MUSIC_VOLUME=/home/jkonratt/music
 
-MUSIC_DOWNLOADER_BASE=/music-downloader
-MUSIC_DOWNLOADER_PORT=4534
+MUSIC_DOWNLOADER_PORT=4200
+
+NETDATA_PORT=19999
 
 NGINX_AUTH_USERNAME_HEADER=X-Auth-Username
 NGINX_MUSIC_IP=172.18.0.4
 NGINX_AUTH_CLIENT_ID=nginx
 NGINX_AUTH_CLIENT_SECRET=secret
 
-PORTAINER_BASE=/portainer
 PORTAINER_PORT=9000
 
-RENOVATE_TOKEN=token
+PROMETHEUS_PORT=9090
 
-SCOREBOARD_BASE=/scoreboard
 SCOREBOARD_PORT=4500
 SCOREBOARD_AUTH_CLIENT_ID=scoreboard
 SCOREBOARD_AUTH_CLIENT_SECRET=secret
 
-SONARQUBE_BASE=/sonar
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=email
+SMTP_PASSWORD="app password"
+
 SONARQUBE_PORT=9000
 
-SSH_BASE=/ssh
-SSH_CONTAINER=ssh
-SSH_PORT=8888
+TUNNEL_TOKEN=token
 
-TUNNEL_CONTAINER=tunnel
-TUNNEL_SUBDOMAIN=codesdowork
-TUNNEL_DOMAIN=${TUNNEL_SUBDOMAIN}.loca.lt
-
-VERDACCIO_BASE=/npm
-VERDACCIO_CONTAINER=verdaccio
-VERDACCIO_PORT=4873
+TZ=Europe/Berlin
