--- a/apps/server/dashboard/public/server.yml
+++ b/apps/server/dashboard/public/server.yml
@@ -12,13 +12,13 @@ sections:
         icon: navidrome.png
         tags:
           - navidrome
-        url: https://justin.konratts.de/music
+        url: https://music.justinkonratt.com
       - title: Music Downloader
         icon: icon.svg
-        url: https://justin.konratts.de/music-downloader
+        url: https://music-downloader.justinkonratt.com
       - title: Scoreboard
         icon: icon.svg
-        url: https://justin.konratts.de/scoreboard
+        url: https://scoreboard.justinkonratt.com
       - title: Website
         icon: icon.svg
         url: https://justinkonratt.com
@@ -29,16 +29,16 @@ sections:
     items:
       - title: Auth
         icon: keycloak.svg
-        url: https://justin.konratts.de/auth
+        url: https://auth.justinkonratt.com
       - title: Portainer
         icon: portainer.svg
         tags:
           - docker
           - container
-        url: https://justin.konratts.de/portainer
+        url: https://portainer.justinkonratt.com
       - title: Logout
         icon: logout.svg
-        url: https://justin.konratts.de/logout
+        url: https://dashboard.justinkonratt.com/callback-logout
   - name: Dev
     displayData:
       cutToHeight: true
@@ -48,15 +48,15 @@ sections:
         icon: icon.svg
         tags:
           - vitepress
-        url: https://justin.konratts.de/docs
+        url: https://docs.justinkonratt.com
       - title: Gitlab
         icon: gitlab.svg
-        url: https://justin.konratts.de/gitlab
+        url: https://gitlab.justinkonratt.com
       - title: SonarQube
         icon: sonarqube.png
         tags:
           - cicd
-        url: https://justin.konratts.de/sonar
+        url: https://sonar.justinkonratt.com
   - name: Monitoring
     displayData:
       cutToHeight: true
@@ -64,13 +64,13 @@ sections:
     items:
       - title: Doku
         icon: doku.svg
-        url: https://just-doku.konratts.de
+        url: https://doku.justinkonratt.com
       - title: Netdata
         icon: netdata.png
-        url: https://just-netdata.konratts.de
+        url: https://netdata.justinkonratt.com
       - title: Prometheus
         icon: prometheus.svg
-        url: https://just-prometheus.konratts.de
+        url: https://prometheus.justinkonratt.com
       - title: Grafana
         icon: grafana.svg
-        url: https://just-grafana.konratts.de
+        url: https://grafana.justinkonratt.com
