--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -4,31 +4,26 @@ env SERVER_ADDRESS;
 env DASHBOARD_DOMAIN;
 env DASHBOARD_PORT;
 
-env AUTH_BASE;
+env AUTH_DOMAIN;
 env AUTH_PORT;
 env AUTH_REALM;
 
 env BITWARDEN_PORT;
 
-env DOCKER_REGISTRY_BASE;
 env DOCKER_REGISTRY_PORT;
 
-env DOCUMENTATION_BASE;
 env DOCUMENTATION_PORT;
 
 env DOKU_PORT;
 
-env GITLAB_BASE;
 env GITLAB_PORT;
 
 env GRAFANA_PORT;
 
 JUST_SITE_PORT;
 
-env MUSIC_BASE;
 env MUSIC_PORT;
 
-env MUSIC_DOWNLOADER_BASE;
 env MUSIC_DOWNLOADER_PORT;
 
 env NETDATA_PORT;
@@ -37,16 +32,12 @@ env NGINX_AUTH_USERNAME_HEADER;
 env NGINX_AUTH_CLIENT_ID;
 env NGINX_AUTH_CLIENT_SECRET;
 
-env PORTAINER_BASE;
 env PORTAINER_PORT;
 
 env PROMETHEUS_PORT;
 
-env SCOREBOARD_BASE;
 env SCOREBOARD_PORT;
 
-env SONARQUBE_BASE;
 env SONARQUBE_PORT;
 
-env SSH_BASE;
 env SSH_PORT;
