--- a/apps/server/scoreboard/.env
+++ b/apps/server/scoreboard/.env
@@ -1,23 +1,19 @@
 # auth
 AUTH_CLIENT_ID=scoreboard
 AUTH_CLIENT_SECRET=secret
-AUTH_ISSUER=https://justin.konratts.de/auth/realms/server
+AUTH_ISSUER=https://auth.justinkonratt.com/realms/server
 
 #because self signed cert
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # next
-NEXTAUTH_URL=https://justin.konratts.de/scoreboard/api/auth
+NEXTAUTH_URL=https://scoreboard.justinkonratt.com/api/auth
 NEXTAUTH_SECRET=secret
-NEXT_PUBLIC_BASE_URL=https://justin.konratts.de/scoreboard
-NEXT_PUBLIC_BASE_PATH=/scoreboard
+NEXT_PUBLIC_BASE_URL=https://scoreboard.justinkonratt.com
 
 # db
 PG_USER=postgres
-PG_PASSWORD=postgres
+PG_PASSWORD=password
 PG_HOST=db
 DB_NAME=scoreboard
 SECRET_KEY=secret
-
-# misc
-BASE_PATH=/scoreboard
