--- a/apps/server/prometheus/project.json
+++ b/apps/server/prometheus/project.json
@@ -2,6 +2,13 @@
     "name": "server-prometheus",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {},
+    "targets": {
+        "deploy": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "copyfiles ./apps/server/prometheus/prometheus.yml -u 1 ./deploy/opt/monorepo"
+            }
+        }
+    },
     "tags": []
 }
