--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -28,7 +28,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name bw.justinkonratt.com;
+    server_name bitwarden.justinkonratt.com;
 
     location / {
         set $upstream bitwarden:$bitwarden_port;
