--- a/apps/server/documentation/Dockerfile
+++ b/apps/server/documentation/Dockerfile
@@ -18,4 +18,4 @@ RUN npx nx build $APP_NAME
 
 FROM nginx:1-alpine-slim
 ARG APP_DIR
-COPY --from=builder /app/dist/apps/$APP_DIR /usr/share/nginx/html/docs
+COPY --from=builder /app/dist/apps/$APP_DIR /usr/share/nginx/html
