fix(linting): fixed unexpected nx lint behavior with dummy commands

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "root": true,
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "ignorePatterns": ["**/*"],
     "plugins": ["@nx"],
     "overrides": [
