--- a/apps/server/backup-service/project.json
+++ b/apps/server/backup-service/project.json
@@ -2,6 +2,13 @@
     "name": "server-backup-service",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {},
+    "targets": {
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
+        }
+    },
     "tags": ["server/backup-service"]
 }
