--- a/apps/server/dashboard/project.json
+++ b/apps/server/dashboard/project.json
@@ -18,6 +18,12 @@
                     "copyfiles -u 3 \"libs/branding/assets/img/**/*\" dist/apps/server/dashboard/public"
                 ]
             }
+        },
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
         }
     },
     "tags": []
