--- a/apps/server/nginx/project.json
+++ b/apps/server/nginx/project.json
@@ -2,6 +2,13 @@
     "name": "server-nginx",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "targets": {},
+    "targets": {
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
+        }
+    },
     "tags": []
 }
