--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -20,6 +20,12 @@
             "options": {
                 "command": "echo docker compose -f /opt/monorepo/server/docker-compose.yml up -d --pull always --remove-orphans"
             }
+        },
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
         }
     },
     "tags": []
