--- a/apps/server/renovate/project.json
+++ b/apps/server/renovate/project.json
@@ -3,6 +3,12 @@
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "targets": {
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
+        },
         "deploy-command": {
             "executor": "nx:run-commands",
             "options": {
