--- a/libs/branding/project.json
+++ b/libs/branding/project.json
@@ -3,6 +3,13 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/branding",
     "projectType": "library",
-    "targets": {},
+    "targets": {
+        "lint": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "echo no linting"
+            }
+        }
+    },
     "tags": ["shared"]
 }
