--- a/apps/server/just-site/project.json
+++ b/apps/server/just-site/project.json
@@ -25,7 +25,7 @@
                 "cwd": "apps/server/just-site"
             }
         },
-        "pre-docker": {
+        "pre-build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "node copy-env.js",
