--- a/apps/server/project.json
+++ b/apps/server/project.json
@@ -3,7 +3,7 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "targets": {
-        "pre-docker": {
+        "pre-build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "touch ./apps/server/.env"
