--- a/apps/server/scoreboard/project.json
+++ b/apps/server/scoreboard/project.json
@@ -36,7 +36,7 @@
                 }
             }
         },
-        "pre-docker": {
+        "pre-build": {
             "executor": "nx:run-commands",
             "options": {
                 "command": "touch ./apps/server/scoreboard/.env.local"
