--- a/libs/server/scripts/project.json
+++ b/libs/server/scripts/project.json
@@ -1,12 +1,12 @@
 {
-    "name": "server-music",
+    "name": "server-scripts",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-    "projectType": "application",
+    "projectType": "library",
     "targets": {
-        "pre-build": {
+        "deploy-command": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "touch ./apps/server/music/.env"
+                "command": "echo chmod 755 /home/jkonratt"
             }
         },
         "lint": {
