feat(server): added ghost for blog

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -31,6 +31,9 @@ DOCUMENTATION_PORT=80
 
 DOKU_PORT=9090
 
+GHOST_DOMAIN=blog.${DOMAIN}
+GHOST_PORT=2368
+
 GITLAB_PORT=80
 GITLAB_DOMAIN=gitlab.${DOMAIN}
 GITLAB_AUTH_CLIENT_ID=gitlab
@@ -46,6 +49,8 @@ MUSIC_GATEWAY=172.18.0.1
 MUSIC_VOLUME=/home/jkonratt/music
 
 MUSIC_DOWNLOADER_PORT=4200
+
+MYSQL_PASS=pass
 
 NETDATA_PORT=19999
 
