--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -37,6 +37,19 @@ server {
 }
 
 server {
+    set_by_lua_block $ghost_port { return os.getenv("GHOST_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name blog.justinkonratt.com;
+
+    location / {
+        set $upstream ghost:$ghost_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT"); }
 
     listen 443 ssl http2;
