--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "@types/pg": "^8.11.0",
         "@types/react": "18.2.57",
         "@types/react-dom": "18.2.19",
+        "@types/tryghost__content-api": "^1.3.15",
         "@typescript-eslint/eslint-plugin": "7.0.2",
         "@typescript-eslint/parser": "7.0.2",
         "@vitest/ui": "^1.0.4",
@@ -101,6 +102,7 @@
         "stream-browserify": "^3.0.0",
         "svelte": "^4.2.11",
         "svelte-check": "^3.6.6",
+        "svelte-infinite-scroll": "^2.0.1",
         "tailwindcss": "^3.4.1",
         "touch": "^3.1.0",
         "ts-jest": "29.1.2",
@@ -124,6 +126,7 @@
         "@trpc/client": "^10.45.1",
         "@trpc/next": "^10.45.1",
         "@trpc/server": "^10.45.1",
+        "@tryghost/content-api": "^1.11.20",
         "axios": "^1.6.7",
         "clsx": "^2.1.0",
         "d3": "^7.8.5",
