--- a/libs/server/scripts/project.json
+++ b/libs/server/scripts/project.json
@@ -6,7 +6,11 @@
         "deploy-command": {
             "executor": "nx:run-commands",
             "options": {
-                "commands": ["echo chmod 755 /home/jkonratt", "echo chmod 600 /etc/cron.d"]
+                "commands": [
+                    "echo chmod 755 /home/jkonratt",
+                    "echo chmod -R 600 /etc/cron.d",
+                    "echo systemctl restart cron"
+                ]
             }
         },
         "lint": {
