--- a/apps/server/renovate/project.json
+++ b/apps/server/renovate/project.json
@@ -14,6 +14,12 @@
             "options": {
                 "command": "echo docker compose -f /opt/monorepo/server/renovate/docker-compose.yml --env-file /opt/monorepo/.env --env-file /opt/monorepo/server/.env --env-file /opt/monorepo/server/renovate/.env  up --pull always renovate"
             }
+        },
+        "deploy": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "copyfiles ./apps/server/renovate/docker-compose.yml ./apps/server/renovate/config.js -u 1 ./deploy/opt/monorepo"
+            }
         }
     },
     "tags": []
