--- a/libs/server/scripts/project.json
+++ b/libs/server/scripts/project.json
@@ -13,6 +13,12 @@
                 ]
             }
         },
+        "deploy": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "copyfiles \"./libs/server/scripts/deploy/**/*\" -u 4 ./deploy"
+            }
+        },
         "lint": {
             "executor": "nx:run-commands",
             "options": {
