--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -262,3 +262,16 @@ server {
         proxy_pass http://$upstream;
     }
 }
+
+server {
+    set_by_lua_block $vpn_port { return os.getenv("VPN_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name vpn.justinkonratt.com;
+
+    location / {
+        set $upstream vpn:$vpn_port;
+        proxy_pass http://$upstream;
+    }
+}
