chore(server): add docker-registry ui

--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -79,6 +79,21 @@ server {
 }
 
 server {
+    set_by_lua_block $docker_registry_ui_port { return os.getenv("DOCKER_REGISTRY_UI_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name dockerui.justinkonratt.com;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream docker-registry-ui:$docker_registry_ui_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $documentation_port { return os.getenv("DOCUMENTATION_PORT"); }
 
     listen 443 ssl http2;
