fix(server-nginx): fix swapped docker services

--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -65,16 +65,14 @@ server {
 }
 
 server {
-    set_by_lua_block $docker_registry_ui_port { return os.getenv("DOCKER_REGISTRY_UI_PORT"); }
+    set_by_lua_block $docker_registry_port { return os.getenv("DOCKER_REGISTRY_PORT"); }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name dockerui.justinkonratt.com;
-
-    access_by_lua_file /etc/nginx/lua/access.lua;
+    server_name docker.justinkonratt.com;
 
     location / {
-        set $upstream docker-registry-ui:$docker_registry_ui_port;
+        set $upstream docker-registry:$docker_registry_port;
         proxy_pass http://$upstream;
     }
 }
