fix(server-nginx): fix swapped docker services

--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -72,6 +72,7 @@ server {
     server_name docker.justinkonratt.com;
 
     location / {
+        client_max_body_size 1G;
         set $upstream docker-registry:$docker_registry_port;
         proxy_pass http://$upstream;
     }
