--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,13 +1,16 @@
 DOMAIN=justinkonratt.com
 SERVER_ADDRESS=ip
 
+DEFAULT_NETWORK_PREFIX=x.x.x
+DEFAULT_NETWORK_MASK=${DEFAULT_NETWORK_PREFIX}.0/24
+
 AUTH_PASSWORD=pass
 AUTH_DOMAIN=auth.${DOMAIN}
 AUTH_PORT=8080
 AUTH_USER=codesdowork
 AUTH_REALM=server
 
-BACKUP_PC_PATH=D:/Documents
+BACKUP_PC_PATH=/home/user/documents
 BACKUP_VOLUME_PATH=./backup-service
 
 BITWARDEN_DOMAIN=bitwarden.justinkonratt.com
@@ -24,6 +27,10 @@ DASHBOARD_PORT=80
 DB_DEFAULT_DB_NAME=postgres
 DB_PASSWORD=pass
 DB_USER=postgres
+
+DNS_IP=${DEFAULT_NETWORK_PREFIX}.x
+DNS_PASSWORD=password
+DNS_WEB_PORT=80
 
 DOCKER_REGISTRY_PORT=5000
 
@@ -55,7 +62,6 @@ MYSQL_PASS=pass
 NETDATA_PORT=19999
 
 NGINX_AUTH_USERNAME_HEADER=X-Auth-Username
-NGINX_MUSIC_IP=172.18.0.4
 NGINX_AUTH_CLIENT_ID=nginx
 NGINX_AUTH_CLIENT_SECRET=secret
 
