--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -65,6 +65,19 @@ server {
 }
 
 server {
+    set_by_lua_block $dns_web_port { return os.getenv("DNS_WEB_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name dns.justinkonratt.com;
+
+    location / {
+        set $upstream dns:$dns_web_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $docker_registry_port { return os.getenv("DOCKER_REGISTRY_PORT"); }
 
     listen 443 ssl http2;
