feat(server): added certbot

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,5 +1,6 @@
 DOMAIN=justinkonratt.com
 SERVER_ADDRESS=ip
+EMAIL=email
 
 DEFAULT_NETWORK_PREFIX=x.x.x
 DEFAULT_NETWORK_MASK=${DEFAULT_NETWORK_PREFIX}.0/24
