feat(server-nginx): add vpn restrictions

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -65,6 +65,7 @@ NETDATA_PORT=19999
 NGINX_AUTH_USERNAME_HEADER=X-Auth-Username
 NGINX_AUTH_CLIENT_ID=nginx
 NGINX_AUTH_CLIENT_SECRET=secret
+NGINX_IP=${DEFAULT_NETWORK_PREFIX}.x
 
 PORTAINER_PORT=9000
 
@@ -87,3 +88,4 @@ TZ=Europe/Berlin
 
 VPN_PORT=51821
 VPN_PASSWORD=password
+VPN_IP=${DEFAULT_NETWORK_PREFIX}.x
