--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -1,6 +1,11 @@
 variables_hash_max_size 2024;
 variables_hash_bucket_size 128;
 
+map $remote_addr $is_vpn_ip {
+    default         false;
+    192.168.192.243 true;
+}
+
 server {
 	listen 80;
 	listen [::]:80;
@@ -71,6 +76,10 @@ server {
     listen [::]:443 ssl http2;
     server_name dns.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     location / {
         set $upstream dns:$dns_web_port;
         proxy_pass http://$upstream;
@@ -98,6 +107,10 @@ server {
     listen [::]:443 ssl http2;
     server_name docs.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -112,6 +125,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name doku.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     access_by_lua_file /etc/nginx/lua/access.lua;
 
@@ -144,6 +161,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name grafana.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     location / {
         set $upstream grafana:$grafana_port;
@@ -198,6 +219,10 @@ server {
     listen [::]:443 ssl http2;
     server_name music-downloader.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -214,6 +239,10 @@ server {
     listen [::]:443 ssl http2;
     server_name netdata.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
@@ -229,6 +258,10 @@ server {
     listen [::]:443 ssl http2;
     server_name portainer.justinkonratt.com;
 
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
+
     location / {
         set $upstream portainer:$portainer_port;
         proxy_pass http://$upstream;
@@ -241,6 +274,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name prometheus.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     access_by_lua_file /etc/nginx/lua/access.lua;
 
@@ -256,6 +293,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name scoreboard.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     location / {
         set $upstream scoreboard:$scoreboard_port;
@@ -282,6 +323,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name vpn.justinkonratt.com;
+
+    if ($is_vpn_ip = false) {
+        return 403;
+    }
 
     location / {
         set $upstream vpn:$vpn_port;
